[package]
name = "redistikv"
version = "99.99.99"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "redistikv"

[dependencies]
redis-module = { version="0.25", features = ["experimental-api"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
tikv-client = "0.1.0"
