[package]
name = "redistikv"
version = "99.99.99"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "redistikv"

[dependencies]
redis-module = { version="0.25", features = ["experimental-api"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
tikv-client = { git = "https://github.com/blacktear23/client-rust.git", branch = "try-optimize" }
prometheus = "0.13.0"
hyper = { version = "0.14.17", features = ["full"] }
gperftools = "0.2.0"
thiserror = "1"
bytes = "1"
atoi = "0.3.2"
tokio-io-timeout = "1.2.0"
bytebuffer = "0.2.1"
async-std = { version = "1.11.0", features = ["unstable"] }